--- a/BE/package.json
+++ b/BE/package.json
@@ -21,7 +21,8 @@
     "mysql2": "^3.14.3",
     "pg-promise": "^11.15.0",
     "sequelize": "^6.37.7",
-    "tesseract.js": "^4.1.1"
+    "tesseract.js": "^4.1.1",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
